VariationsService now retries over HTTP if HTTPS connection fails.

If a seed fetch over HTTP fails, Variations Service will now retry the fetch over
HTTP, encrypting the If-none-match header, and not including the
restrict parameter.

Bug: 769154
Change-Id: Ief7fd92a691110719cda5396b3bfd9c4cd402fde
Reviewed-on: https://chromium-review.googlesource.com/777723
Commit-Queue: Carlos IL <carlosil@chromium.org>
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Reviewed-by: Steven Holte <holte@chromium.org>
Reviewed-by: Emily Stark <estark@chromium.org>
Reviewed-by: Drew Wilson <atwilson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523218}
Former-commit-id: a03ca60d8d44b15a2857e8ab52307947646ee98a