components/variations/service/variations_service.cc
@@ -10,9 +10,11 @@
 #include <utility>
 #include <vector>
 
+#include "base/base64.h"
 #include "base/base_switches.h"
 #include "base/build_time.h"
 #include "base/command_line.h"
+#include "base/feature_list.h"
 #include "base/memory/ptr_util.h"
 #include "base/metrics/histogram_macros.h"
 #include "base/metrics/sparse_histogram.h"
@@ -27,6 +29,8 @@
 #include "base/version.h"
 #include "build/build_config.h"
 #include "components/data_use_measurement/core/data_use_user_data.h"
+#include "components/encrypted_messages/encrypted_message.pb.h"
+#include "components/encrypted_messages/message_encrypter.h"
 #include "components/metrics/metrics_state_manager.h"
 #include "components/network_time/network_time_tracker.h"
 #include "components/pref_registry/pref_registry_syncable.h"
@@ -54,6 +58,25 @@
 
 namespace variations {
 namespace {
+
+const base::Feature kHttpRetryFeature{"VariationsHttpRetry",
+                                      base::FEATURE_DISABLED_BY_DEFAULT};
+
+// Constants used for encrypting the if-none-match header if we are retrieving a
+// seed over http.
+const char kEncryptedMessageLabel[] = "chrome variations";
+
+// TODO(crbug.com/792239): Change this key to a unique VariationsService one,
+// once the matching private key is changed server side.
+// Key is used to encrypt headers in seed retrieval requests that happen over
+// HTTP connections (when retrying after an unsuccessful HTTPS retrieval
+// attempt).
+const uint8_t kServerPublicKey[] = {
+    0x51, 0xcc, 0x52, 0x67, 0x42, 0x47, 0x3b, 0x10, 0xe8, 0x63, 0x18,
+    0x3c, 0x61, 0xa7, 0x96, 0x76, 0x86, 0x91, 0x40, 0x71, 0x39, 0x5f,
+    0x31, 0x1a, 0x39, 0x5b, 0x76, 0xb1, 0x6b, 0x3d, 0x6a, 0x2b};
+
+const uint32_t kServerPublicKeyVersion = 1;
 
 // TODO(mad): To be removed when we stop updating the NetworkTimeTracker.
 // For the HTTP date headers, the resolution of the server time is 1 second.
@@ -286,6 +309,18 @@ std::string VariationsService::LoadPermanentConsistencyCountry(
                                                               latest_country);
 }
 
+bool VariationsService::EncryptString(const std::string& plaintext,
+                                      std::string* encrypted) {
+  encrypted_messages::EncryptedMessage encrypted_message;
+  if (!encrypted_messages::EncryptSerializedMessage(
+          kServerPublicKey, kServerPublicKeyVersion, kEncryptedMessageLabel,
+          plaintext, &encrypted_message) ||
+      !encrypted_message.SerializeToString(encrypted)) {
+    return false;
+  }
+  return true;
+}
+
 void VariationsService::AddObserver(Observer* observer) {
   DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
   observer_list_.AddObserver(observer);
@@ -324,24 +359,26 @@ void VariationsService::SetCreateTrialsFromSeedCalledForTesting(bool called) {
 
 GURL VariationsService::GetVariationsServerURL(
     PrefService* policy_pref_service,
-    const std::string& restrict_mode_override) {
+    const std::string& restrict_mode_override,
+    HttpOptions http_options) {
+  bool secure = http_options == USE_HTTPS;
   std::string server_url_string(
       base::CommandLine::ForCurrentProcess()->GetSwitchValueASCII(
-          switches::kVariationsServerURL));
+          secure ? switches::kVariationsServerURL
+                 : switches::kVariationsInsecureServerURL));
   if (server_url_string.empty())
-    server_url_string = kDefaultServerUrl;
+    server_url_string = secure ? kDefaultServerUrl : kDefaultInsecureServerUrl;
   GURL server_url = GURL(server_url_string);
-
-  const std::string restrict_param =
-      !restrict_mode_override.empty()
-          ? restrict_mode_override
-          : GetRestrictParameterPref(client_.get(), policy_pref_service);
-  if (!restrict_param.empty()) {
-    server_url = net::AppendOrReplaceQueryParameter(server_url,
-                                                    "restrict",
-                                                    restrict_param);
+  if (secure) {
+    const std::string restrict_param =
+        !restrict_mode_override.empty()
+            ? restrict_mode_override
+            : GetRestrictParameterPref(client_.get(), policy_pref_service);
+    if (!restrict_param.empty()) {
+      server_url = net::AppendOrReplaceQueryParameter(server_url, "restrict",
+                                                      restrict_param);
+    }
   }
-
   server_url = net::AppendOrReplaceQueryParameter(server_url, "osname",
                                                   GetPlatformString());
 
@@ -360,6 +397,7 @@ GURL VariationsService::GetVariationsServerURL(
     server_url = net::AppendOrReplaceQueryParameter(server_url, "milestone",
                                                     version_parts[0]);
   }
+
   DCHECK(server_url.is_valid());
   return server_url;
 }
@@ -418,87 +456,13 @@ void VariationsService::EnableForTesting() {
 }
 
 void VariationsService::DoActualFetch() {
-  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
-  DCHECK(IsFetchingEnabled());
-
-  // Pessimistically assume the fetch will fail. The failure streak will be
-  // reset upon success.
-  int num_failures_to_fetch =
-      local_state_->GetInteger(prefs::kVariationsFailedToFetchSeedStreak);
-  local_state_->SetInteger(prefs::kVariationsFailedToFetchSeedStreak,
-                           num_failures_to_fetch + 1);
-
-  // Normally, there shouldn't be a |pending_request_| when this fires. However
-  // it's not impossible - for example if Chrome was paused (e.g. in a debugger
-  // or if the machine was suspended) and OnURLFetchComplete() hasn't had a
-  // chance to run yet from the previous request. In this case, don't start a
-  // new request and just let the previous one finish.
-  if (pending_seed_request_)
-    return;
-
-  net::NetworkTrafficAnnotationTag traffic_annotation =
-      net::DefineNetworkTrafficAnnotation("chrome_variations_service", R"(
-        semantics {
-          sender: "Chrome Variations Service"
-          description:
-            "Retrieves the list of Google Chrome's Variations from the server, "
-            "which will apply to the next Chrome session upon a restart."
-          trigger:
-            "Requests are made periodically while Google Chrome is running."
-          data: "The operating system name."
-          destination: GOOGLE_OWNED_SERVICE
-        }
-        policy {
-          cookies_allowed: NO
-          setting: "This feature cannot be disabled by settings."
-          policy_exception_justification:
-            "Not implemented, considered not required."
-        })");
-  pending_seed_request_ =
-      net::URLFetcher::Create(0, variations_server_url_, net::URLFetcher::GET,
-                              this, traffic_annotation);
-  data_use_measurement::DataUseUserData::AttachToFetcher(
-      pending_seed_request_.get(),
-      data_use_measurement::DataUseUserData::VARIATIONS);
-  pending_seed_request_->SetLoadFlags(net::LOAD_DO_NOT_SEND_COOKIES |
-                                      net::LOAD_DO_NOT_SEND_AUTH_DATA |
-                                      net::LOAD_DO_NOT_SAVE_COOKIES);
-  pending_seed_request_->SetRequestContext(client_->GetURLRequestContext());
-  bool enable_deltas = false;
-  if (!field_trial_creator_.seed_store().variations_serial_number().empty() &&
-      !disable_deltas_for_next_request_) {
-    // Tell the server that delta-compressed seeds are supported.
-    enable_deltas = true;
-
-    // Get the seed only if its serial number doesn't match what we have.
-    pending_seed_request_->AddExtraRequestHeader(
-        "If-None-Match:" +
-        field_trial_creator_.seed_store().variations_serial_number());
-  }
-  // Tell the server that delta-compressed and gzipped seeds are supported.
-  const char* supported_im = enable_deltas ? "A-IM:x-bm,gzip" : "A-IM:gzip";
-  pending_seed_request_->AddExtraRequestHeader(supported_im);
-
-  pending_seed_request_->Start();
-
-  const base::TimeTicks now = base::TimeTicks::Now();
-  base::TimeDelta time_since_last_fetch;
-  // Record a time delta of 0 (default value) if there was no previous fetch.
-  if (!last_request_started_time_.is_null())
-    time_since_last_fetch = now - last_request_started_time_;
-  UMA_HISTOGRAM_CUSTOM_COUNTS("Variations.TimeSinceLastFetchAttempt",
-                              time_since_last_fetch.InMinutes(), 1,
-                              base::TimeDelta::FromDays(7).InMinutes(), 50);
-  UMA_HISTOGRAM_COUNTS_100("Variations.RequestCount", request_count_);
-  ++request_count_;
-  last_request_started_time_ = now;
-  disable_deltas_for_next_request_ = false;
+  DoFetchFromURL(variations_server_url_);
 }
 
 bool VariationsService::StoreSeed(const std::string& seed_data,
                                   const std::string& seed_signature,
                                   const std::string& country_code,
-                                  const base::Time& date_fetched,
+                                  base::Time date_fetched,
                                   bool is_delta_compressed,
                                   bool is_gzip_compressed) {
   DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
@@ -525,12 +489,110 @@ VariationsService::CreateLowEntropyProvider() {
   return state_manager_->CreateLowEntropyProvider();
 }
 
+bool VariationsService::DoFetchFromURL(const GURL& url) {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
+  DCHECK(IsFetchingEnabled());
+
+  // Pessimistically assume the fetch will fail. The failure streak will be
+  // reset upon success.
+  int num_failures_to_fetch =
+      local_state_->GetInteger(prefs::kVariationsFailedToFetchSeedStreak);
+  local_state_->SetInteger(prefs::kVariationsFailedToFetchSeedStreak,
+                           num_failures_to_fetch + 1);
+
+  // Normally, there shouldn't be a |pending_request_| when this fires. However
+  // it's not impossible - for example if Chrome was paused (e.g. in a debugger
+  // or if the machine was suspended) and OnURLFetchComplete() hasn't had a
+  // chance to run yet from the previous request. In this case, don't start a
+  // new request and just let the previous one finish.
+  if (pending_seed_request_)
+    return false;
+
+  net::NetworkTrafficAnnotationTag traffic_annotation =
+      net::DefineNetworkTrafficAnnotation("chrome_variations_service", R"(
+        semantics {
+          sender: "Chrome Variations Service"
+          description:
+            "Retrieves the list of Google Chrome's Variations from the server, "
+            "which will apply to the next Chrome session upon a restart."
+          trigger:
+            "Requests are made periodically while Google Chrome is running."
+          data: "The operating system name."
+          destination: GOOGLE_OWNED_SERVICE
+        }
+        policy {
+          cookies_allowed: NO
+          setting: "This feature cannot be disabled by settings."
+          policy_exception_justification:
+            "Not implemented, considered not required."
+        })");
+  pending_seed_request_ = net::URLFetcher::Create(0, url, net::URLFetcher::GET,
+                                                  this, traffic_annotation);
+  data_use_measurement::DataUseUserData::AttachToFetcher(
+      pending_seed_request_.get(),
+      data_use_measurement::DataUseUserData::VARIATIONS);
+  pending_seed_request_->SetLoadFlags(net::LOAD_DO_NOT_SEND_COOKIES |
+                                      net::LOAD_DO_NOT_SEND_AUTH_DATA |
+                                      net::LOAD_DO_NOT_SAVE_COOKIES);
+  pending_seed_request_->SetRequestContext(client_->GetURLRequestContext());
+  bool enable_deltas = false;
+  if (!field_trial_creator_.seed_store().variations_serial_number().empty() &&
+      !disable_deltas_for_next_request_) {
+    // Tell the server that delta-compressed seeds are supported.
+    enable_deltas = true;
+    // Get the seed only if its serial number doesn't match what we have.
+    // If the fetch is being done over HTTP, encrypt the If-None-Match header.
+    const std::string& original_sn =
+        field_trial_creator_.seed_store().variations_serial_number();
+    if (!url.SchemeIs(url::kHttpsScheme) &&
+        base::FeatureList::IsEnabled(kHttpRetryFeature)) {
+      std::string encrypted_sn;
+      std::string encoded_sn;
+      if (!EncryptString(original_sn, &encrypted_sn)) {
+        pending_seed_request_.reset();
+        return false;
+      }
+      base::Base64Encode(encrypted_sn, &encoded_sn);
+      pending_seed_request_->AddExtraRequestHeader("If-None-Match:" +
+                                                   encoded_sn);
+    } else {
+      pending_seed_request_->AddExtraRequestHeader("If-None-Match:" +
+                                                   original_sn);
+    }
+  }
+  // Tell the server that delta-compressed and gzipped seeds are supported.
+  const char* supported_im = enable_deltas ? "A-IM:x-bm,gzip" : "A-IM:gzip";
+  pending_seed_request_->AddExtraRequestHeader(supported_im);
+
+  pending_seed_request_->Start();
+
+  const base::TimeTicks now = base::TimeTicks::Now();
+  base::TimeDelta time_since_last_fetch;
+  // Record a time delta of 0 (default value) if there was no previous fetch.
+  if (!last_request_started_time_.is_null())
+    time_since_last_fetch = now - last_request_started_time_;
+  UMA_HISTOGRAM_CUSTOM_COUNTS("Variations.TimeSinceLastFetchAttempt",
+                              time_since_last_fetch.InMinutes(), 1,
+                              base::TimeDelta::FromDays(7).InMinutes(), 50);
+  UMA_HISTOGRAM_COUNTS_100("Variations.RequestCount", request_count_);
+  ++request_count_;
+  last_request_started_time_ = now;
+  disable_deltas_for_next_request_ = false;
+  return true;
+}
+
 void VariationsService::StartRepeatedVariationsSeedFetch() {
   DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
 
   // Initialize the Variations server URL.
   variations_server_url_ =
-      GetVariationsServerURL(policy_pref_service_, restrict_mode_);
+      GetVariationsServerURL(policy_pref_service_, restrict_mode_, USE_HTTPS);
+
+  // Initialize the fallback HTTP URL if the HTTP retry feature is enabled.
+  if (base::FeatureList::IsEnabled(kHttpRetryFeature)) {
+    insecure_variations_server_url_ =
+        GetVariationsServerURL(policy_pref_service_, restrict_mode_, USE_HTTP);
+  }
 
   // Check that |CreateTrialsFromSeed| was called, which is necessary to
   // retrieve the serial number that will be sent to the server.
@@ -585,13 +647,29 @@ void VariationsService::OnURLFetchComplete(const net::URLFetcher* source) {
       pending_seed_request_.release());
   const net::URLRequestStatus& status = request->GetStatus();
   const int response_code = request->GetResponseCode();
-  UMA_HISTOGRAM_SPARSE_SLOWLY(
-      "Variations.SeedFetchResponseOrErrorCode",
-      status.is_success() ? response_code : status.error());
-
+  bool was_https = request->GetURL().SchemeIs(url::kHttpsScheme);
+  if (was_https) {
+    UMA_HISTOGRAM_SPARSE_SLOWLY(
+        "Variations.SeedFetchResponseOrErrorCode",
+        status.is_success() ? response_code : status.error());
+  } else {
+    UMA_HISTOGRAM_SPARSE_SLOWLY(
+        "Variations.SeedFetchResponseOrErrorCode.HTTP",
+        status.is_success() ? response_code : status.error());
+  }
   if (status.status() != net::URLRequestStatus::SUCCESS) {
     DVLOG(1) << "Variations server request failed with error: "
              << status.error() << ": " << net::ErrorToString(status.error());
+    // If the current fetch attempt was over an HTTPS connection, retry the
+    // fetch immediately over an HTTP connection.
+    // Currently we only do this if if the 'VariationsHttpRetry' feature is
+    // enabled.
+    if (was_https && !insecure_variations_server_url_.is_empty()) {
+      // When re-trying via HTTP, return immediately. OnURLFetchComplete() will
+      // be called with the result of that retry.
+      if (DoFetchFromURL(insecure_variations_server_url_))
+        return;
+    }
     // It's common for the very first fetch attempt to fail (e.g. the network
     // may not yet be available). In such a case, try again soon, rather than
     // waiting the full time interval.
