components/variations/service/variations_service.h
@@ -76,6 +76,18 @@ class VariationsService
 
   ~VariationsService() override;
 
+  // Enum used to choose whether GetVariationsServerURL will return an HTTPS
+  // URL or an HTTP one. The HTTP URL is used as a fallback for seed retrieval
+  // in cases where an HTTPS connection fails.
+  enum HttpOptions { USE_HTTP, USE_HTTPS };
+
+  // Creates field trials based on the variations seed loaded from local state.
+  // If there is a problem loading the seed data, all trials specified by the
+  // seed may not be created. Some field trials are configured to override or
+  // associate with (for reporting) specific features. These associations are
+  // registered with |feature_list|.
+  bool CreateTrialsFromSeed(base::FeatureList* feature_list);
+
   // Should be called before startup of the main message loop.
   void PerformPreMainMessageLoopStartup();
 
@@ -103,9 +115,11 @@ class VariationsService
 
   // Returns the variations server URL, which can vary if a command-line flag is
   // set and/or the variations restrict pref is set in |local_prefs|. Declared
-  // static for test purposes.
+  // static for test purposes. |http_options| determines whether to use the http
+  // or https URL.
   GURL GetVariationsServerURL(PrefService* local_prefs,
-                              const std::string& restrict_mode_override);
+                              const std::string& restrict_mode_overrided,
+                              HttpOptions http_options);
 
   // Returns the permanent country code stored for this client. Country code is
   // in the format of lowercase ISO 3166-1 alpha-2. Example: us, br, in
@@ -164,7 +178,7 @@ class VariationsService
 
  protected:
   // Starts the fetching process once, where |OnURLFetchComplete| is called with
-  // the response.
+  // the response. This calls DoFetchToURL with the set url.
   virtual void DoActualFetch();
 
   // Stores the seed to prefs. Set as virtual and protected so that it can be
@@ -172,7 +186,7 @@ class VariationsService
   virtual bool StoreSeed(const std::string& seed_data,
                          const std::string& seed_signature,
                          const std::string& country_code,
-                         const base::Time& date_fetched,
+                         base::Time date_fetched,
                          bool is_delta_compressed,
                          bool is_gzip_compressed);
 
@@ -232,6 +246,10 @@ class VariationsService
     LOAD_COUNTRY_MAX,
   };
 
+  // Attempts a seed fetch from the set |url|. Returns true if the fetch was
+  // started successfully, false otherwise.
+  bool DoFetchFromURL(const GURL& url);
+
   // Calls FetchVariationsSeed once and repeats this periodically. See
   // implementation for details on the period. Must be called after
   // |CreateTrialsFromSeed|.
@@ -261,6 +279,11 @@ class VariationsService
   //   (1) Resets failure streaks for Safe Mode.
   //   (2) Records the time of this fetch as the most recent successful fetch.
   void RecordSuccessfulFetch();
+
+  // Encrypts a string using the encrypted_messages component, input is passed
+  // in as |plaintext|, outputs a serialized EncryptedMessage protobuf as
+  // |encrypted|. Returns true on success, false on failure.
+  bool EncryptString(const std::string& plaintext, std::string* encrypted);
 
   // Loads the country code to use for filtering permanent consistency studies,
   // updating the stored country code if the stored value was for a different
@@ -300,6 +323,10 @@ class VariationsService
 
   // The URL to use for querying the variations server.
   GURL variations_server_url_;
+
+  // HTTP URL used as a fallback if HTTPS fetches fail. If not set, retries
+  // over HTTP will not be attempted.
+  GURL insecure_variations_server_url_;
 
   // Tracks whether the initial request to the variations server had completed.
   bool initial_request_completed_;
