components/variations/variations_url_constants.cc
@@ -10,4 +10,7 @@ namespace variations {
 const char kDefaultServerUrl[] =
     "https://clientservices.googleapis.com/chrome-variations/seed";
 
+const char kDefaultInsecureServerUrl[] =
+    "http://clientservices.googleapis.com/chrome-variations/seed";
+
 }  // namespace variations
