components/variations/variations_url_constants.h
@@ -9,6 +9,8 @@ namespace variations {
 
 extern const char kDefaultServerUrl[];
 
+extern const char kDefaultInsecureServerUrl[];
+
 }  // namespace variations
 
 #endif  // COMPONENTS_VARIATIONS_VARIATIONS_URL_CONSTANTS_H_
